# andesite

./: .gitignore  README.md  __version__.py  pyproject.toml  requirements.txt  setup.py  version.py
.github/workflows/: CI.yml  release.yml
analisis/: __init__.py  cross_validation.py  inspector.py
andesite/: __init__.py  __version__.py
andesite/analisis/: histogram.py  slicer_view_model.py
andesite/clasification/: varkrig_classification.py
andesite/composite/: composite.py
andesite/datafiles/: grid.py
andesite/estimations/: kriging.py
andesite/utils/: log.py  manipulations.py  version.py
andesite/variography/: experimental.py  maps.py  modeling.py
clasification/: __init__.py  validation.py  varkrig_classification.py
composite/: __init__.py  composite.py  compositing.py  numeric_compositing.py
core/: __init__.py  readers.py
datafiles/: __init__.py
estimations/: __init__.py  kriging.py
src/andesite/: __init__.py
src/andesite/analisis/: cross_validation.py  histogram.py
src/andesite/clasification/: pass_classification.py  validation.py
src/andesite/composite/: categoric_compositing.py  composite.py  numeric_compositing.py
src/andesite/datafiles/: grid.py
src/andesite/estimations/: estimation_exceptions.py  kriging.py
src/andesite/pytest/: test_categoric_composites.py  test_composite.py  test_numeric_composites.py
src/andesite/utils/: _globals.py  files.py  manipulations.py
src/andesite/variography/: experimental.py  maps.py  modeling.py
tests/: test_categoric_composites.py  test_cerro_blanco_plots.py  test_composite.py  test_numeric_composites.py  test_variogram_plots.py  test_visualizations.py
tutorials/: INSTALL_WSL_WIN.md
utils/: __init__.py  _globals.py  _typing.py  exceptions.py  files.py  log.py  manipulations.py  version.py
variography/: __init__.py  correlogram.py  dth_variogram.py  experimental.py  maps.py  modeling.py
visualizations/: __init__.py  barchart_plotly.py  base_plotly.py  cell_declustering_plotly.py  cond_means_plotly.py  contact_analysis_plotly.py  correlation_matrix_plotly.py  cpplt_plotly.py  ddh_variogram_plotly.py  histogram_plotly.py  local_props_plotly.py  plotly_plots_nevado.py  pp_plotly.py  prop_grade_curve_plotly.py  proportional_effect_plotly.py  qq_plotly.py  scatter_mean_std_plotly.py  scatter_plotly.py  stacked_histogram_plotly.py  swath_plotly.py  ton_grade_curve_plotly.py  transfer_function_plotly.py  variogram_plotly.py  violin_plotly.py
